--- a/wouso/interface/apps/lesson/templates/lesson/cpanel/manage_categories.html
+++ b/wouso/interface/apps/lesson/templates/lesson/cpanel/manage_categories.html
@@ -28,8 +28,8 @@
             <td><img src="{{ c.logo_url }}" class="logo"/></td>
             <td>{{ c.name }}</td>
             <td>
-                <a class="btn btn-info" href="{% url sort_lessons c.id %}">
-                    <span class="glyphicon glyphicon-sort"></span>{% trans 'Sort Lessons' %}
+                <a class="btn btn-info" href="{% url sort_lesson_tags c.id %}">
+                    <span class="glyphicon glyphicon-sort"></span>{% trans 'Sort Tags' %}
                 </a>
                 <a class="btn btn-success" href="{% url edit_lesson_category c.id %}">
                     <span class="glyphicon glyphicon-edit"></span>{% trans 'Edit' %}
