--- a/wouso/interface/apps/lesson/templates/lesson/cpanel/manage_tags.html
+++ b/wouso/interface/apps/lesson/templates/lesson/cpanel/manage_tags.html
@@ -13,7 +13,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb "Manage tags" "manage_tags" %}
+    {% breadcrumb "Manage tags" "manage_lesson_tags" %}
 {% endblock %}
 
 {% block sectioncontent %}
@@ -32,6 +32,9 @@
             <td>{{ t.category }}</td>
             <td>{{ t.number_of_lessons }}</td>
             <td>
+                <a class="btn btn-info" href="{% url sort_lessons t.id %}">
+                    <span class="glyphicon glyphicon-sort"></span>{% trans 'Sort Lessons' %}
+                </a>
                 <a class="btn btn-success" href="{% url edit_lesson_tag t.id %}">
                     <span class="glyphicon glyphicon-edit"></span>{% trans 'Edit' %}
                 </a>
