--- a/wouso/resources/static/css/site.css
+++ b/wouso/resources/static/css/site.css
@@ -82,6 +82,12 @@ h1,h2,h3,h4,h5,h6 {
 	background: #FFF;
 }
 
+#sidebar .leaderboard h4 {
+	text-align: center;
+	margin-bottom: 30px;
+}
+
+
 /*
  * Content
  */
@@ -308,4 +314,3 @@ h1,h2,h3,h4,h5,h6 {
 	float: right;
 	margin: 0 0 0 10px;
 }
-
