--- a/wouso/resources/templates/interface/sidebar/leaderboard.html
+++ b/wouso/resources/templates/interface/sidebar/leaderboard.html
@@ -3,7 +3,17 @@
 {% load ui %}
 
 {% if user.is_authenticated %}
-<div id="leaderboard" class="well">
+<div class="well leaderboard">
 	<h4> Leaderboard </h4>
+
+	<table border="0" cellspacing="0" cellpadding="0" class="table table-striped table-hover">
+	    {% for r in races|slice:":10" %}
+	    <tr>
+	        <td>{{ forloop.counter }}</td>
+	        <td>{% player_race r %}</td>
+	        <td>{% coin_amount r.points|floatformat:0 %}</td>
+	    </tr>
+	    {% endfor %}
+	</table>
 </div>
 {% endif %}
