[quiz page ] moved JavaScript logic to quiz.js

--- a/wouso/games/quiz/templates/quiz/index.html
+++ b/wouso/games/quiz/templates/quiz/index.html
@@ -199,3 +199,8 @@
 </section>
 
 {% endblock %}
+
+{% block scripts %}
+	<script type="text/javascript" src="{{ basepath }}/static/js/quiz.js"></script>
+{% endblock %}
+
