Add pagination for files

--- a/wouso/interface/apps/files/templates/files/cpanel/list_files.html
+++ b/wouso/interface/apps/files/templates/files/cpanel/list_files.html
@@ -23,6 +23,20 @@
 {% block sectioncontent %}
 
 <div class="col-md-12">
+
+    {% if is_paginated %}
+        <div class="pagination">
+            Pages:
+            {% for i in page_obj.paginator.page_range %}
+                {% if page_obj.number == i %}
+                    <strong>{{i}}</strong>
+                {% else %}
+                    <a href="{% url files_page i %}">{{i}}</a>
+                {% endif %}
+            {% endfor %}
+        </div>
+    {% endif %}
+
     <table class="table table-bordered table-hover table-condensed">
         <tr>
             <th>#</th>
