--- a/wouso/games/quiz/templates/quiz/index.html
+++ b/wouso/games/quiz/templates/quiz/index.html
@@ -2,205 +2,24 @@
 
 {% load i18n %}
 
-{% block title %}{% trans 'Categories' %}{% endblock %}
 {% block sectiontitle %}{% trans 'Categories' %}{% endblock %}
 
 {% block sectioncontent %}
 
-    {% for c in categories %}
-        <h3><a href="{% url quiz_category_view c.id %}">{{ c }}</a>
-    {% empty %}
-        {% trans 'No categories have been added yet' %}
-    {% endfor %}
-
-
-<section id="quiz-list">
-	{% if active_quizzes or expired_quizzes %}
-
-		{% if request.user.is_staff %}
-			<p>
-				<i>{% trans 'Note: Inactive quizzes are only visible by staff members' %}</i>
-			</p>
-
-			<!---------------------->
-			<!-- Inactive quizzes -->
-
-			<h3 class="type">{% trans 'Inactive quizzes' %}</h3>
-
-			{% for t in inactive_quizzes %}
-			<div class="quiz">
-				<div class="quiz-box">
-					<h4 class="title" data-toggle="true">
-						<small>
-							{% if t.best_attempt.points %}
-								{{ t.best_attempt.points }} / 100 &nbsp;
-							{% else %}
-								-- / 100 &nbsp;
-							{% endif %}
-								<span class="glyphicon glyphicon-education"></span>
-						</small>
-						{{ t.quiz.name }}
-						<a class="start-quiz" href="{% url quiz_view t.quiz.id %}"
-							onclick="return confirm('Are you sure you want to take this quiz?')">
-							<span class="glyphicon glyphicon-flash"></span>
-							{% trans 'Start Quiz' %}
-						</a>
-					</h4>
-					<div class="score">
-						{% if t.best_attempt.points %}
-							<div class="score-box best">
-								<div class="points">
-									<span class="glyphicon glyphicon-education"></span>
-									<b>{% trans 'Best Score' %} : </b>
-									{{ t.best_attempt.points }}
-									{% trans 'points' %}
-								</div>
-								<div class="date">
-									<span class="glyphicon glyphicon-time"></span>
-									{{ t.best_attempt.date }}
-								</div>
-							</div>
-							<div class="score-box last">
-								<div class="points">
-									<span class="glyphicon glyphicon-education"></span>
-									<b>{% trans 'Last Score' %} : </b>
-									{{ t.last_attempt.points }}
-									{% trans 'points' %}
-								</div>
-								<div class="date">
-									<span class="glyphicon glyphicon-time"></span>
-									{{ t.last_attempt.date }}
-								</div>
-							</div>
-						{% else %}
-							<div class="score-box small text-danger">
-								{% trans 'No run history' %}
-							</div>
-						{% endif %}
-					</div>
-				</div>
+<div class="row">
+	{% for c in categories %}
+		<section class="course col-md-6">
+			<div class="course-container">
+				<a href="{% url quiz_category_view c.id %}">
+					<img class="course-img" src="{{ basepath }}/static/img/math.jpg">
+					<h4 class="title">{{ c }}</h4>
+				</a>
 			</div>
-			{% endfor %}
-		{% endif %}
-
-		<!-------------------->
-		<!-- Active quizzes -->
-
-		<h3 class="type"> {% trans 'Active quizzes' %} </h3>
-		{% for t in active_quizzes %}
-			<div class="quiz">
-				<div class="quiz-box">
-					<h4 class="title" data-toggle="true">
-						<small>
-							{% if t.best_attempt.points %}
-								{{ t.best_attempt.points }} / 100 &nbsp;
-							{% else %}
-								-- / 100 &nbsp;
-							{% endif %}
-								<span class="glyphicon glyphicon-education"></span>
-						</small>
-						{{ t.quiz.name }}
-						<a class="start-quiz" href="{% url quiz_view t.quiz.id %}"
-							onclick="return confirm('Are you sure you want to take this quiz?')">
-							<span class="glyphicon glyphicon-flash"></span>
-							{% trans 'Start Quiz' %}
-						</a>
-					</h4>
-					<div class="score">
-						{% if t.best_attempt.points %}
-							<div class="score-box best">
-								<div class="points">
-									<span class="glyphicon glyphicon-education"></span>
-									<b>{% trans 'Best Score' %} : </b>
-									{{ t.best_attempt.points }}
-									{% trans 'points' %}
-								</div>
-								<div class="date">
-									<span class="glyphicon glyphicon-time"></span>
-									{{ t.best_attempt.date }}
-								</div>
-							</div>
-							<div class="score-box last">
-								<div class="points">
-									<span class="glyphicon glyphicon-education"></span>
-									<b>{% trans 'Last Score' %} : </b>
-									{{ t.last_attempt.points }}
-									{% trans 'points' %}
-								</div>
-								<div class="date">
-									<span class="glyphicon glyphicon-time"></span>
-									{{ t.last_attempt.date }}
-								</div>
-							</div>
-						{% else %}
-							<div class="score-box small text-danger">
-								{% trans 'No run history' %}
-							</div>
-						{% endif %}
-					</div>
-				</div>
-			</div>
-		{% endfor %}
-
-		<!--------------------->
-		<!-- Expired quizzes -->
-
-		<h3 class="type">{% trans 'Expired quizzes' %}</h3>
-
-		{% for t in expired_quizzes %}
-			<div class="quiz">
-				<div class="quiz-box">
-					<h4 class="title" data-toggle="true">
-						<small>
-							{% if t.best_attempt.points %}
-								{{ t.best_attempt.points }} / 100 &nbsp;
-							{% else %}
-								-- / 100 &nbsp;
-							{% endif %}
-								<span class="glyphicon glyphicon-education"></span>
-						</small>
-						{{ t.quiz.name }}
-					</h4>
-					<div class="score">
-						{% if t.best_attempt.points %}
-							<div class="score-box best">
-								<div class="points">
-									<span class="glyphicon glyphicon-education"></span>
-									<b>{% trans 'Best Score' %} : </b>
-									{{ t.best_attempt.points }}
-									{% trans 'points' %}
-								</div>
-								<div class="date">
-									<span class="glyphicon glyphicon-time"></span>
-									{{ t.best_attempt.date }}
-								</div>
-							</div>
-							<div class="score-box last">
-								<div class="points">
-									<span class="glyphicon glyphicon-education"></span>
-									<b>{% trans 'Last Score' %} : </b>
-									{{ t.last_attempt.points }}
-									{% trans 'points' %}
-								</div>
-								<div class="date">
-									<span class="glyphicon glyphicon-time"></span>
-									{{ t.last_attempt.date }}
-								</div>
-							</div>
-						{% else %}
-							<div class="score-box small text-danger">
-								{% trans 'No run history' %}
-							</div>
-						{% endif %}
-					</div>
-				</div>
-			</div>
-		{% endfor %}
-
-	{% else %}
-		<p>{% trans 'No quizzes have been published. Come back later.' %}</p>
-	{% endif %}
-</section>
+		</section>
+	{% empty %}
+		{% trans 'No categories have been added yet' %}
+	{% endfor %}
+</div>
 
 {% endblock %}
 
