[lesson] update UI

--- a/wouso/interface/apps/lesson/templates/lesson/lesson.html
+++ b/wouso/interface/apps/lesson/templates/lesson/lesson.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block title %}
-	{{ lesson.category }} - {{ lesson.name }}
+	{{ lesson.name }}
 {% endblock %}
 
 {% block sectioncontent %}
