--- a/wouso/interface/apps/lesson/templates/lesson/index.html
+++ b/wouso/interface/apps/lesson/templates/lesson/index.html
@@ -8,18 +8,18 @@
 
 <div class="row">
 {% if categories %}
-    {% for c in categories %}
-    	<section class="course col-md-6">
-	    	<div class="course-container">
-	    		<a href="">
+	{% for c in categories %}
+		<section class="course col-md-6">
+			<div class="course-container">
+				<a href="/lessons/cat/{{ c.id }}">
 					<img class="course-img" src="{{ basepath }}/static/img/math.jpg">
-			        <h4 class="title">{{ c }}</h4>
-		        </a>
-	        </div>
-    	</section>
+					<h4 class="title">{{ c }} </h4>
+				</a>
+			</div>
+		</section>
 	{% endfor %}
 {% else %}
-    {% trans 'No lessons have been added.' %}
+	{% trans 'No lessons have been added.' %}
 {% endif %}
 </div>
 
