--- a/wouso/resources/static/css/autocomplete.css
+++ b/wouso/resources/static/css/autocomplete.css
@@ -1,48 +1,41 @@
-.ac_input {
-	width: 180px;
-}
 .ac_results {
+	width: 300px;
+	max-height: 300px;
 	padding: 0px;
-	border: 1px solid WindowFrame;
-	background-color: Window;
-	overflow: hidden;
+	border: 1px solid #CCC;
+	overflow: auto;
+	background: #FFF;
 }
 
 .ac_results ul {
 	width: 100%;
-	list-style-position: outside;
-	list-style: none;
 	padding: 0;
 	margin: 0;
 }
 
 .ac_results iframe {
-	display:none;/*sorry for IE5*/
-	display/**/:block;/*sorry for IE5*/
-	position:absolute;
-	top:0;
-	left:0;
-	z-index:-1;
-	filter:mask();
-	width:3000px;
-	height:3000px;
+	width: 3000px;
+	height: 3000px;
+	display: none;
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
 }
 
 .ac_results li {
+	width: 100%;
 	margin: 0px;
 	padding: 2px 5px;
+	font-size: 14px;
 	cursor: pointer;
-	display: block;
-	width: 100%;
-	font: menu;
-	font-size: 12px;
-	color: #000;
 	overflow: hidden;
 }
+
+.ac_results li:hover {
+	background: #EEE;
+}
+
 .ac_loading {
 	background : url('../images/indicator.gif') right center no-repeat;
-}
-.ac_over {
-	background-color: Highlight;
-	color: HighlightText;
 }
