--- a/wouso/resources/templates/interface/sidebar/leaderboard.html
+++ b/wouso/resources/templates/interface/sidebar/leaderboard.html
@@ -1,6 +1,7 @@
 {% load user %}
 {% load i18n %}
 {% load ui %}
+{% load top %}
 
 {% if user.is_authenticated %}
 <div class="well leaderboard">
@@ -15,5 +16,16 @@
 	    </tr>
 	    {% endfor %}
 	</table>
+
+	<table border="0" cellspacing="0" cellpadding="0" class="table table-striped table-hover">
+	    {% for r in top_10_players %}
+	    <tr>
+	        <td>{{ forloop.counter }}</td>
+	        <td>{% player_race r %}</td>
+	        <td>{% coin_amount r.points|floatformat:0 %}</td>
+	    </tr>
+	    {% endfor %}
+	</table>
+
 </div>
 {% endif %}
