--- a/wouso/resources/templates/profile/profile.html
+++ b/wouso/resources/templates/profile/profile.html
@@ -4,203 +4,238 @@
 {% load i18n %}
 
 {% block sectiontitle %}
-	{% trans 'Profile' %}
+	{{ profile }}
+	<span class="pull-right text-info">
+		{% artifact_full profile.level %}
+	</span>
 {% endblock %}
 
 {% block sectioncontent %}
 
-<div class="profile group-{{ profile.race.name.lower }} {% if profile.group %}group-{{ profile.group.name.lower }}{% endif %}">
-	<div class="points">
-		<div class="points-big">{{ profile.points}}</div>
-		<div class="rank">{% if top.disabled %}-{% else %}{% trans 'rank' %}: {{ top.position }}{% endif %}</div>
-	</div>
+<section id="profile-page">
+	<div class="profile group-{{ profile.race.name.lower }} {% if profile.group %}group-{{ profile.group.name.lower }}{% endif %}">
 
-	<img src="{% player_avatar profile %}" class="avatar" />
-	<h2>{{ profile }}</h2>
-	<h3>{% artifact_full profile.level %} </h3>
-	<h4>{% if profile.group %}{% trans 'Group' %}: {% player_group profile.group %}{% endif %}
-	{% if profile.race %}{% trans 'Group' %}: {% player_race profile.race %}{% endif %}
-	</h4>
-	{% if profile.magic.artifact_amounts.all %}
-		<ul class="artifacts" id="player-artifacts">
-		{% for a in profile.magic.artifact_amounts.all %}
-			<li>{% artifact a %}</li>
-		{% endfor %}
-		</ul>
-	{% endif %}
-		<ul class="artifacts" id="player-spells">
-		{% for s in profile.magic.spells.all %}
-			<li>{% if s.source.id == player.id %}{% spell_due s %}
-				{% else %}{% if profile.id == player.id %}
-				{% spell_due s %}
-				{% else %}
-					{% spell_unknown s %}
-				{% endif %}
-				{% endif %}
-			</li>
-		{% endfor %}
-		</ul>
-
-	<div class="actions">
-		{% if profile.user.id != user.id %}
-			{% comment "Use text for message label." %}
-			<a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">✉</a>
-			{% endcomment %}
-			<a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">Send message</a>
-		{% endif %}
-		{% if not config_disable_magic %}
-			<a class="button button-min" href="{% url magic_cast profile.id%}" title="{% trans 'Cast a spell on this player' %}">✤</a>
-		{% endif %}
-		{% comment "Disable profile editing" %}
-		{% if profile.user.id == user.id %}
-			<a class="button button-min" href="{% url set_profile %}" title="{% trans 'Set your profile' %}">S</a>
-		{% endif %}
-		{% endcomment %}
-
-		{% comment "No challenges" %}
-		{% ifnotequal user.get_profile.id profile.id %}
-			{% if challenge_launched_recently %}
-				<span class="button">{% trans 'Challenged' %}</span>
-			{% else %}
-				<a class="button" href="{% url challenge_launch profile.id %}">{% trans 'Challenge!' %}</a>
-			{% endif %}
-		{% endifnotequal %}
-		{% endcomment %}
-
-		{% comment "No special quest" %}
-		{% if specialquest_button.MATE %}
-			<span class="button">{% trans 'Special mate' %}</span>
-		{% elif specialquest_button.OTHER %}
-			<span class="button">{% trans 'Other group' %}</span>
-		{% elif specialquest_button.ALREADY_INVITED %}
-			<span class="button">{% trans 'Invited' %}</span>
-		{% elif specialquest_button.INVITE %}
-			<a href="{% url specialquest_invite profile.id %}"
-			   title="{% trans 'Invite in my Special Quest group' %}">{% trans 'Invite' %}</a>
-		{% endif %}
-		{% endcomment %}
-
-		{% comment "No reporting" %}
-		<a class="button" href="{% url report_player profile.id%}">{% trans 'Report' %}</a>
-		{% endcomment %}
-	</div>
-
-	<div class="second">
-		{% trans 'Last seen' %}:
-			{% if profile.last_seen %}
-				{{profile.last_seen}}
-			{% else %}
-				{% trans 'Never' %}
-		{% endif %}
-	</div>
-
-	{% if perms.config.change_setting %}
-		<div class="actions">
-			<span class="button-list">Staff: [{{ profile.user.username }}] </span>
-			<p class="clearer"></p>
+		<div class="row">
+			<div class="text-info col-md-12">
+				<img src="{% player_avatar profile %}" class="avatar pull-right" />
+				<h4 class="col-md-8">
+					Experience: {{ profile.points}}
+				</h4>
+				<h4 class="col-md-8">
+					{% artifact_full profile.level %}
+				</h4>
+				<h4 class="col-md-8">
+					{% if top.disabled %}-{% else %}{% trans 'Rank' %}: {{ top.position }}{% endif %}
+				</h4>
+				<h4 class="col-md-12">
+					{% if profile.group %}
+						{% trans 'Group' %}: {% player_group profile.group %}
+					{% endif %}
+					{% if profile.race %}
+						{% trans 'Group' %}: {% player_race profile.race %}
+					{% endif %}
+				</h4>
+			</div>
 		</div>
-	{% endif %}
 
-	{% if user.is_superuser %}
-	<div class="actions">
-		{% comment "Not really useful" %}
-		<span class="button-list">Admin:</span>
-		{% endcomment %}
-		<a class="button" href="{% url challenge_stats profile.id %}">{% trans 'Challenges' %}</a>
-		<a class="button button-min" href="{% url admin:auth_user_change profile.user.id %}">✍</a>
-		<a class="button" href="{% url impersonate profile.id %}">{% trans 'Impersonate' %}</a>
-	</div>
-	{% endif %}
+		<div class="row">
+			<div class="col-md-6 text-info ">
+				<h4 class="col-md-8">
+					{% if perms.config.change_setting %}
+						Staff: [{{ profile.user.username }}]
+					{% endif %}
+				</h4>
+			</div>
+
+			<div class="col-md-6 text-right">
+				{% trans 'Last seen' %}:
+					{% if profile.last_seen %}
+						{{profile.last_seen}}
+					{% else %}
+						{% trans 'Never' %}
+				{% endif %}
+			</div>
+		</div>
+
+		<hr>
+
+		{% if user.is_superuser %}
+			<div>
+				{% comment "Not really useful" %}
+					<span class="button-list">Admin:</span>
+				{% endcomment %}
+
+				<a class="button btn btn-primary" href="{% url challenge_stats profile.id %}">
+					<span class="glyphicon glyphicon-tower"></span>
+					{% trans 'Challenges' %}
+				</a>
+				<a class="button btn btn-success" href="{% url admin:auth_user_change profile.user.id %}">
+					<span class="glyphicon glyphicon-pencil"></span>
+					 Edit
+				</a>
+				<a class="button btn btn-warning" href="{% url impersonate profile.id %}">
+					<span class="glyphicon glyphicon-sunglasses"></span>
+					{% trans 'Impersonate' %}
+				</a>
+			</div>
+			<hr>
+		{% endif %}
 
 
-	<div id="tab-1" class="tab_content">
+		{% if profile.magic.artifact_amounts.all %}
+			<ul class="artifacts" id="player-artifacts">
+			{% for a in profile.magic.artifact_amounts.all %}
+				<li>{% artifact a %}</li>
+			{% endfor %}
+			</ul>
+		{% endif %}
+
+		<ul class="artifacts" id="player-spells">
+			{% for s in profile.magic.spells.all %}
+				<li>{% if s.source.id == player.id %}{% spell_due s %}
+					{% else %}
+						{% if profile.id == player.id %}
+							{% spell_due s %}
+						{% else %}
+							{% spell_unknown s %}
+						{% endif %}
+					{% endif %}
+				</li>
+			{% endfor %}
+		</ul>
+
+		<div class="actions">
+			{% if profile.user.id != user.id %}
+				{% comment "Use text for message label." %}
+				<a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">✉</a>
+				{% endcomment %}
+				<a class="button button-min" href="{% url create_to profile.id %}" title="{% trans 'Send a message' %}">Send message</a>
+			{% endif %}
+			{% if not config_disable_magic %}
+				<a class="button button-min" href="{% url magic_cast profile.id%}" title="{% trans 'Cast a spell on this player' %}">✤</a>
+			{% endif %}
+			{% comment "Disable profile editing" %}
+			{% if profile.user.id == user.id %}
+				<a class="button button-min" href="{% url set_profile %}" title="{% trans 'Set your profile' %}">S</a>
+			{% endif %}
+			{% endcomment %}
+
+			{% comment "No challenges" %}
+			{% ifnotequal user.get_profile.id profile.id %}
+				{% if challenge_launched_recently %}
+					<span class="button">{% trans 'Challenged' %}</span>
+				{% else %}
+					<a class="button" href="{% url challenge_launch profile.id %}">{% trans 'Challenge!' %}</a>
+				{% endif %}
+			{% endifnotequal %}
+			{% endcomment %}
+
+			{% comment "No special quest" %}
+			{% if specialquest_button.MATE %}
+				<span class="button">{% trans 'Special mate' %}</span>
+			{% elif specialquest_button.OTHER %}
+				<span class="button">{% trans 'Other group' %}</span>
+			{% elif specialquest_button.ALREADY_INVITED %}
+				<span class="button">{% trans 'Invited' %}</span>
+			{% elif specialquest_button.INVITE %}
+				<a href="{% url specialquest_invite profile.id %}"
+				   title="{% trans 'Invite in my Special Quest group' %}">{% trans 'Invite' %}</a>
+			{% endif %}
+			{% endcomment %}
+
+			{% comment "No reporting" %}
+			<a class="button" href="{% url report_player profile.id%}">{% trans 'Report' %}</a>
+			{% endcomment %}
+		</div>
+
+
 		{% include 'activity/stream.html' %}
 
 		{% if activity.has_previous %}
-			<a href="{% url player_profile id=profile.id page=activity.previous_page_number %}#tab-1"> Newer </a>
+			<a class="btn btn-default" href="{% url player_profile id=profile.id page=activity.previous_page_number %}#tab-1"> Newer </a>
 		{% endif %}
 
 		{% if activity.has_next %}
-			<a href="{% url player_profile id=profile.id page=activity.next_page_number %}#tab-1"> Older </a>
+			<a class="btn btn-default" href="{% url player_profile id=profile.id page=activity.next_page_number %}#tab-1"> Older </a>
 		{% endif %}
-	</div>
 
 		<!-- Not used for now -->
 		<!--
-	<div id="tab-2" class="tab_content">
-		<div class="subgroups">
-			<h3>{% trans 'Rank' %}</h3>
-			<p>Global: <span class="points">{{ top.position }}</span></p>
-			{% for g in top.topgroups %}
-				<p>{{ g }}: <span class="points">{{ g.position }}</span></p>
-			{% endfor %}
-			<div id="legend"></div>
-		</div>
+		<div id="tab-2" class="tab_content">
+			<div class="subgroups">
+				<h3>{% trans 'Rank' %}</h3>
+				<p>Global: <span class="points">{{ top.position }}</span></p>
+				{% for g in top.topgroups %}
+					<p>{{ g }}: <span class="points">{{ g.position }}</span></p>
+				{% endfor %}
+				<div id="legend"></div>
+			</div>
 
-		<script id="source" language="javascript" type="text/javascript">
+			<script id="source" language="javascript" type="text/javascript">
+				// using flot to draw evolution
+				$(function () {
+					var d1 = [[null, 12],{% for p in top.week_evolution %}[{{p.0}},{{p.1}}],{% endfor %}[7, null]];
+					{% for g in top.topgroups %}
+					var dg{{g.id}} = [{% for p in g.week_evolution %}[{{p.0}},{{p.1}}],{% endfor %}];
+					{% endfor %}
+					var options = { lines: { show: true }, points: { show: true },
+						xaxis: {
+							ticks: [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7]]
+							},
+						yaxis: {
+							transform: function (v) { return -v; },
+							inverseTransform: function (v) { return -v; },
+						  },
+						legend: {
+							container: $('#legend'),
+						},
+					};
+					var setup = [
+						{label: "{% trans 'Position evolution' %}", color: "green", data: d1},
+						{% for g in top.topgroups %}
+						{label: "{{ g }}", data: dg{{g.id}}},
+						{% endfor %}
+					];
+					$("#tab-2").bind('custom', function() {
+						$.plot($("#graf1"), setup, options);
+						$('#tab-2').unbind('custom');
+					});
+				});
+			</script>
+		</div>
+		-->
+
+		<!--
+		<div class="subgroups">
+			{% for source,coins in scoring.iteritems %}
+				<h3>{% trans source %}</h3>
+					{% for coin, value in coins.iteritems %}
+						<p>{% coin_amount value coin %}</p>
+					{% endfor %}
+			{% empty %}
+				{% trans 'No points registered for this player.' %}
+			{% endfor %}
+			<p><a class="goto" href="{% url player_points_history profile.id %}">{% trans 'History' %}</a></p>
+		</div>
+		-->
+
+		<!-- <script id="source2" language="javascript" type="text/javascript">
 			// using flot to draw evolution
 			$(function () {
-				var d1 = [[null, 12],{% for p in top.week_evolution %}[{{p.0}},{{p.1}}],{% endfor %}[7, null]];
-				{% for g in top.topgroups %}
-				var dg{{g.id}} = [{% for p in g.week_evolution %}[{{p.0}},{{p.1}}],{% endfor %}];
-				{% endfor %}
+				var d1 = [[null, 760],{% for p in top.week_points_evolution %}[{{p.0}},{{p.1}}],{% endfor %}[7, null]];
 				var options = { lines: { show: true }, points: { show: true },
 					xaxis: {
 						ticks: [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7]]
 						},
-					yaxis: {
-						transform: function (v) { return -v; },
-						inverseTransform: function (v) { return -v; },
-					  },
-					legend: {
-						container: $('#legend'),
-					},
 				};
-				var setup = [
-					{label: "{% trans 'Position evolution' %}", color: "green", data: d1},
-					{% for g in top.topgroups %}
-					{label: "{{ g }}", data: dg{{g.id}}},
-					{% endfor %}
-				];
-				$("#tab-2").bind('custom', function() {
-					$.plot($("#graf1"), setup, options);
-					$('#tab-2').unbind('custom');
+				$("#tab-3").bind('custom', function() {
+					$.plot($("#graf2"), [{ label: "{% trans 'Weekly points evolution' %}", color: "blue", data: d1}], options);
+					$('#tab-3').unbind('custom');
 				});
 			});
-		</script>
+		</script> -->
 	</div>
-	-->
-
-	<!--
-	<div class="subgroups">
-		{% for source,coins in scoring.iteritems %}
-			<h3>{% trans source %}</h3>
-				{% for coin, value in coins.iteritems %}
-					<p>{% coin_amount value coin %}</p>
-				{% endfor %}
-		{% empty %}
-			{% trans 'No points registered for this player.' %}
-		{% endfor %}
-		<p><a class="goto" href="{% url player_points_history profile.id %}">{% trans 'History' %}</a></p>
-	</div>
-	-->
-
-	<!-- <script id="source2" language="javascript" type="text/javascript">
-		// using flot to draw evolution
-		$(function () {
-			var d1 = [[null, 760],{% for p in top.week_points_evolution %}[{{p.0}},{{p.1}}],{% endfor %}[7, null]];
-			var options = { lines: { show: true }, points: { show: true },
-				xaxis: {
-					ticks: [[1,1],[2,2],[3,3],[4,4],[5,5],[6,6],[7,7]]
-					},
-			};
-			$("#tab-3").bind('custom', function() {
-				$.plot($("#graf2"), [{ label: "{% trans 'Weekly points evolution' %}", color: "blue", data: d1}], options);
-				$('#tab-3').unbind('custom');
-			});
-		});
-	</script> -->
-</div>
+</section>
 
 {% endblock %}
 
