hidden links to Files, Messages and Leaderboard from header

--- a/wouso/resources/templates/interface/header.html
+++ b/wouso/resources/templates/interface/header.html
@@ -21,9 +21,9 @@
 				<ul class="nav navbar-nav">
 					<li><a href="/lessons">{% trans 'Lessons' %}</a></li>
 					<li><a href="/g/quiz">{% trans 'Quiz' %}</a></li>
-					<li><a href="/files">{% trans 'Files' %}</a></li>
-					<li><a href="/m">{% trans 'Messages' %}</a></li>
-					<li><a href="/leaderboard">{% trans 'Leaderboard' %}</a></li>
+					<!-- <li><a href="/files">{% trans 'Files' %}</a></li> -->
+					<!-- <li><a href="/m">{% trans 'Messages' %}</a></li> -->
+					<!-- <li><a href="/leaderboard">{% trans 'Leaderboard' %}</a></li> -->
 					<li><a href="{% url forums_overview %}">{% trans 'Forum' %}</a></li>
 					{% if perms.config.change_setting %}
 					<li><a href="{% url status %}">CPanel</a></li>
