--- a/wouso/resources/templates/interface/sidebar/leaderboard.html
+++ b/wouso/resources/templates/interface/sidebar/leaderboard.html
@@ -5,7 +5,9 @@
 
 {% if user.is_authenticated %}
 <div class="well leaderboard">
-	<h4> Leaderboard </h4>
+	<a href="/leaderboard">
+		<h4>{% trans 'Leaderboard' %}</h4>
+	</a>
 
 	<table border="0" cellspacing="0" cellpadding="0" class="table table-striped table-hover">
 	    {% for r in races|slice:":10" %}
@@ -19,6 +21,7 @@
 
 	<table border="0" cellspacing="0" cellpadding="0" class="table table-striped table-hover">
 	    {% for r in top_10_players %}
+	    asdasd asd asd as
 	    <tr>
 	        <td>{{ forloop.counter }}</td>
 	        <td>{% player_race r %}</td>
@@ -26,6 +29,5 @@
 	    </tr>
 	    {% endfor %}
 	</table>
-
 </div>
 {% endif %}
