code re-factoring

--- a/wouso/interface/apps/lesson/templates/lesson/index.html
+++ b/wouso/interface/apps/lesson/templates/lesson/index.html
@@ -2,7 +2,9 @@
 
 {% load i18n %}
 
-{% block sectiontitle %}{% trans 'Lessons' %} {% endblock %}
+{% block sectiontitle %}
+	{% trans 'Lessons' %}
+{% endblock %}
 
 {% block sectioncontent %}
 
