--- a/wouso/resources/templates/pages/news_item.html
+++ b/wouso/resources/templates/pages/news_item.html
@@ -1,8 +1,9 @@
 {% extends 'interface/section_base.html' %}
 {% load i18n %}
 {% load user %}
-{% block title %}{% trans 'News' %}{% endblock %}
-{% block sectiontitle %}{% trans 'News' %}{% endblock %}
+{% block sectiontitle %}
+	{% trans 'News' %}
+{% endblock %}
 
 {% block sectioncontent %}
 
