--- a/wouso/resources/templates/site_index.html
+++ b/wouso/resources/templates/site_index.html
@@ -2,46 +2,44 @@
 {% load user %}
 {% load artifacts %}
 {% load i18n %}
-{% block scripts %}
-{% endblock %}
+
 {% block content %}
     {% if is_homepage %}
     {% endif %}
 
     {% comment "Do not use wall activities" %}
-    <div id="wall-container">
-        <h2>{% trans 'Activities' %}</h2>
-        <div id="wall">
-            {% include 'activity/stream.html' %}
-        </div>
-        <div id="wall-navigation">
-        {% if activity.has_previous %}
-            <a href="{% url homepage %}"> &raquo; </a>
-        {% endif %}
+	    <div id="wall-container">
+	        <h2>{% trans 'Activities' %}</h2>
+	        <div id="wall">
+	            {% include 'activity/stream.html' %}
+	        </div>
+	        <div id="wall-navigation">
+		        {% if activity.has_previous %}
+		            <a href="{% url homepage %}"> &raquo; </a>
+		        {% endif %}
 
-        {% if activity.has_next %}
-            <a href="{% url homepage page=activity.next_page_number %}"> &laquo;</a>
-        {% endif %}
-
-        <!-- RD: for the moment this may not be required
-        <span class="points"><a href="{% url all_activity %}">{% trans 'All activities' %} &raquo;</a></span>
-            -->
-        </div>
-    </div>
+		        {% if activity.has_next %}
+		            <a href="{% url homepage page=activity.next_page_number %}"> &laquo;</a>
+		        {% endif %}
+	        </div>
+	    </div>
     {% endcomment %}
 
-    <div id="news">
-    {% block news %}
-        <h2 class="section_title"> {% trans 'News' %} </h2>
-        {% for n in news %}
-            <p><a href="{% url news_item_view n.pk %}">{{n.title}}</a></p>
-        {% empty %}
-            <p class="empty">{% trans 'No news.' %}</p>
-        {% endfor %}
-    {% if more %}
-        <a href="{% url news_index_view %}">{% trans 'All news' %}</a>
-    {% endif %}
-    {% endblock %}
-    </div>
+	<div class="row">
+		{% for c in categories %}
+			<section class="course col-md-6">
+				<div class="course-container">
+					<a href="{% url quiz_category_view c.id %}">
+						<img class="course-img" src="{{ basepath }}/static/img/math.jpg">
+						<h4 class="title">{{ c }}</h4>
+					</a>
+				</div>
+			</section>
+		{% empty %}
+			{% trans 'No categories have been added yet' %}
+		{% endfor %}
+	</div>
+
+
 
 {% endblock %}
