--- a/wouso/resources/templates/interface/sidebar/leaderboard.html
+++ b/wouso/resources/templates/interface/sidebar/leaderboard.html
@@ -1,7 +1,6 @@
 {% load user %}
 {% load i18n %}
 {% load ui %}
-{% load top %}
 
 {% if user.is_authenticated %}
 <div class="well leaderboard">
@@ -10,7 +9,7 @@
 	</a>
 
 	<table border="0" cellspacing="0" cellpadding="0" class="table table-striped table-hover">
-	    {% for r in races|slice:":10" %}
+	    {% for r in top_races %}
 	    <tr>
 	        <td>{{ forloop.counter }}</td>
 	        <td>{% player_race r %}</td>
@@ -20,12 +19,11 @@
 	</table>
 
 	<table border="0" cellspacing="0" cellpadding="0" class="table table-striped table-hover">
-	    {% for r in top_10_players %}
-	    asdasd asd asd as
+	    {% for p in top_players %}
 	    <tr>
 	        <td>{{ forloop.counter }}</td>
-	        <td>{% player_race r %}</td>
-	        <td>{% coin_amount r.points|floatformat:0 %}</td>
+	        <td>{% player p %}</td>
+	        <td>{% coin_amount p.points|floatformat:0 %}</td>
 	    </tr>
 	    {% endfor %}
 	</table>
