--- a/wouso/resources/templates/interface/header.html
+++ b/wouso/resources/templates/interface/header.html
@@ -20,7 +20,7 @@
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li><a href="/lessons">{% trans 'Lessons' %}</a></li>
-					<li><a href="/g/quiz">{% trans 'Quiz' %}</a></li>
+					<li><a href="/g/quiz">{% trans 'Quizzes' %}</a></li>
 					<!-- <li><a href="/files">{% trans 'Files' %}</a></li> -->
 					<!-- <li><a href="/m">{% trans 'Messages' %}</a></li> -->
 					<!-- <li><a href="/leaderboard">{% trans 'Leaderboard' %}</a></li> -->
