--- a/wouso/resources/templates/site_index.html
+++ b/wouso/resources/templates/site_index.html
@@ -25,6 +25,25 @@
 	    </div>
     {% endcomment %}
 
+    <div style="font-size: 150%; text-align: center; display: block; margin-left: auto; margin-right: auto">
+        <p>
+        Bine ai venit pe platforma LearningPark! Abia așteptăm să înveți noi lucruri din matematică, fizică și chimie.
+        </p>
+        <br>
+        <p>
+        Pentru început te rugăm să parcurgi testele de evaluare inițială accesând link-ul indicat de imaginea de mai jos, sau butonul "Teste" din meniul de sus al paginii. Alege testele din disciplinile pe care dorești să le urmezi la materia de bacalaureat.
+        </p>
+        <br>
+        <p>
+        <a href="{% url quiz_index_view %}"><img class="course-img" src="{{ basepath }}/static/img/check.png"></a>
+        </p>
+        <p>
+        <a href="{% url quiz_index_view %}">Teste de evaluare inițială</a>
+        </a>
+        </p>
+    </div>
+
+    {% comment "Do not use list of tests for now" %}
 	<div class="row">
 		{% for c in categories %}
 			<section class="course col-md-6">
@@ -39,7 +58,7 @@
 			{% trans 'No categories have been added yet' %}
 		{% endfor %}
 	</div>
-
+   {% endcomment %}
 
 
 {% endblock %}
