Interface updates. To be broken into multiple commits

--- a/wouso/resources/templates/site_base.html
+++ b/wouso/resources/templates/site_base.html
@@ -13,7 +13,7 @@
 	<!-- <link rel="stylesheet" href="{{ basepath }}/static/themes/{{ config_theme }}/styles.css" /> -->
 	{% endif %}
 
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700">
 	<!-- <link rel="stylesheet" href="{{ basepath }}/static/css/style.css" /> -->
 	<link rel="stylesheet" href="{{ basepath }}/static/libs/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="{{ basepath }}/static/css/site.css">
