--- a/wouso/games/quiz/templates/quiz/category.html
+++ b/wouso/games/quiz/templates/quiz/category.html
@@ -12,7 +12,6 @@
 
 <section id="quiz-list">
 	{% if active_quizzes or expired_quizzes %}
-
 		{% if request.user.is_staff %}
 			<p>
 				<i>{% trans 'Note: Inactive quizzes are only visible by staff members' %}</i>
@@ -24,14 +23,15 @@
 			<h3 class="type">{% trans 'Inactive quizzes' %}</h3>
 
 			{% for t in inactive_quizzes %}
+                        {% if t.quiz.category == category %}
 			<div class="quiz">
 				<div class="quiz-box">
 					<h4 class="title" data-toggle="true">
 						<small>
 							{% if t.best_attempt.points %}
-								{{ t.best_attempt.points }} / 100 &nbsp;
+                                                            {{ t.best_attempt.points }} / {{ t.quiz.points_reward }} &nbsp;
 							{% else %}
-								-- / 100 &nbsp;
+                                                            -- / {{ t.quiz.points_reward}} &nbsp;
 							{% endif %}
 								<span class="glyphicon glyphicon-education"></span>
 						</small>
@@ -76,6 +76,7 @@
 					</div>
 				</div>
 			</div>
+                        {% endif %}
 			{% endfor %}
 		{% endif %}
 
@@ -84,20 +85,21 @@
 
 		<h3 class="type"> {% trans 'Active quizzes' %} </h3>
 		{% for t in active_quizzes %}
+                {% if t.quiz.category == category %}
 			<div class="quiz">
 				<div class="quiz-box">
 					<h4 class="title" data-toggle="true">
 						<small>
 							{% if t.best_attempt.points %}
-								{{ t.best_attempt.points }} / 100 &nbsp;
+                                                            {{ t.best_attempt.points }} / {{ t.quiz.points_reward }} &nbsp;
 							{% else %}
-								-- / 100 &nbsp;
+                                                            -- / {{ t.quiz.points_reward}} &nbsp;
 							{% endif %}
 								<span class="glyphicon glyphicon-education"></span>
 						</small>
 						{{ t.quiz.name }}
 						<a class="start-quiz" href="{% url quiz_view t.quiz.id %}"
-							onclick="return confirm('Are you sure you want to take this quiz?')">
+                                                    onclick="return confirm('Are you sure you want to take this quiz?')">
 							<span class="glyphicon glyphicon-flash"></span>
 							{% trans 'Start Quiz' %}
 						</a>
@@ -136,6 +138,7 @@
 					</div>
 				</div>
 			</div>
+                {% endif %}
 		{% endfor %}
 
 		<!--------------------->
@@ -144,14 +147,15 @@
 		<h3 class="type">{% trans 'Expired quizzes' %}</h3>
 
 		{% for t in expired_quizzes %}
+                {% if t.quiz.category == category %}
 			<div class="quiz">
 				<div class="quiz-box">
 					<h4 class="title" data-toggle="true">
 						<small>
 							{% if t.best_attempt.points %}
-								{{ t.best_attempt.points }} / 100 &nbsp;
+                                                            {{ t.best_attempt.points }} / {{ t.quiz.points_reward }} &nbsp;
 							{% else %}
-								-- / 100 &nbsp;
+                                                            -- / {{ t.quiz.points_reward}} &nbsp;
 							{% endif %}
 								<span class="glyphicon glyphicon-education"></span>
 						</small>
@@ -191,6 +195,7 @@
 					</div>
 				</div>
 			</div>
+                {% endif %}
 		{% endfor %}
 
 	{% else %}
