--- a/wouso/games/quiz/templates/quiz/index.html
+++ b/wouso/games/quiz/templates/quiz/index.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block sectiontitle %}{% trans 'Categories' %}{% endblock %}
+{% block sectiontitle %}{% trans 'Objects' %}{% endblock %}
 
 {% block sectioncontent %}
 
@@ -11,7 +11,7 @@
 		<section class="course col-md-6">
 			<div class="course-container">
 				<a href="{% url quiz_category_view c.id %}">
-					<img class="course-img" src="{{ basepath }}/static/img/math.jpg">
+                                        <img class="course-img" src="{{ basepath }}/media/{{ c.logo }}">
 					<h4 class="title">{{ c }}</h4>
 				</a>
 			</div>
