--- a/wouso/interface/apps/lesson/templates/lesson/index.html
+++ b/wouso/interface/apps/lesson/templates/lesson/index.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block sectiontitle %}
-	{% trans 'Lessons' %}
+	{% trans 'Objects' %}
 {% endblock %}
 
 {% block sectioncontent %}
@@ -14,7 +14,7 @@
 		<section class="course col-md-6">
 			<div class="course-container">
 				<a href="/lessons/cat/{{ c.id }}">
-					<img class="course-img" src="{{ basepath }}/static/img/math.jpg">
+                                        <img class="course-img" src="{{ basepath }}/media/{{ c.logo }}">
 					<h4 class="title">{{ c }} </h4>
 				</a>
 			</div>
