quiz: Use local (not CDN) version of MathJax

--- a/wouso/resources/templates/cpanel/index.html
+++ b/wouso/resources/templates/cpanel/index.html
@@ -23,7 +23,8 @@
     <script type="text/javascript" src="{{ basepath }}/static/js/format.item.js"></script>
     <script type="text/javascript" src="{{ basepath }}/static/js/jquery.timers.js"></script>
     <script type="text/javascript" src="{{ basepath }}/static/js/ajaxify.js"></script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <!--<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>-->
+    <script type="text/javascript" src="{{ basepath }}/static/js/mathjax/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     <script type="text/javascript">
         var url_base = '{{ basepath }}';
