Use new start message for final quizzes

--- a/wouso/resources/templates/site_index.html
+++ b/wouso/resources/templates/site_index.html
@@ -33,7 +33,7 @@
         </p>
         <br>
         <p>
-        Am adăugat noi teste pentru fiecare discipilină. În acest moment există mai multe teste pe care le poți rezolva. De asemenea, am actualizat timpul de redare a unui test la 3 zile. După 3 zile de la rularea unui test, îl poți rula din nou.
+        Luni, 18 mai 2015, de la ora 18:00, au fost activate un nou set de teste, cele finale. Marți, 26 mai 2015, la ora 18:00, vor fi dezactivate testele de până acum (inițiale). Timpul de redare a unui test este de 3 zile. După 3 zile de la rularea unui test, îl poți rula din nou.
         </p>
         <p>
         Din momentul în care vei accesa un test, timpul va începe să se scurgă. Recomandăm, așadar, să accesezi testele atunci când vei avea disponibilitatea și mediul propice rezolvării acestora. Mult succes!
@@ -41,7 +41,7 @@
         <br>
         <br>
         <p>
-        La capitolul lecții video, platforma cuprinde actualmente 87 de lecții video pe care le vei putea parcurge. Sperăm să îți fie cât mai utile!
+        La capitolul lecții video, platforma cuprinde actualmente 141 de lecții video pe care le vei putea parcurge. Sperăm să îți fie cât mai utile!
         </p>
     </div>
 
